--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
-# Google GenAI Configuration
+# LLM Provider Configuration
+LLM_PROVIDER=gemini  # Options: "gemini" or "ollama"
+
+# Google GenAI Configuration (required if LLM_PROVIDER=gemini)
 GEMINI_API_KEY=your_google_genai_api_key_here
+GEMINI_MODEL=gemini-2.5-flash
+
+# Ollama Configuration (required if LLM_PROVIDER=ollama)
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:latest
+OLLAMA_REQUEST_TIMEOUT=120.0
+OLLAMA_CONTEXT_WINDOW=8000
 
 # API Configuration
 API_HOST=0.0.0.0
