--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ GEMINI_MODEL=gemini-2.5-flash
 
 # Ollama Configuration (required if LLM_PROVIDER=ollama)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.1:latest
+OLLAMA_MODEL=gpt-oss:20b
 OLLAMA_REQUEST_TIMEOUT=120.0
 OLLAMA_CONTEXT_WINDOW=8000
 
